# cvsp

./: .gitignore  LICENSE.txt  main.py  pyproject.toml
.github/workflows/: lint.yml
app/: app.py
attacks/adversarial_deepfake/: __init__.py  attack.py  generate_dataset.py  main.py  preprocessing.py  wrapper.py
attacks/adversarial_patch/: README.md  demo.py  demo_raw.py
attacks/deepfake/: __init__.py  attack.py  demo.py  face_swap.py
attacks/presentation/: demo.py
attacks/utils/: dataset.py  fs.py
cvsp/: digital.py  physical.py  preprocessing.py
cvsp/models/: minifas.py
cvsp/models/adv_guard/: __init__.py  dataset.py  model.py  train.py
cvsp/models/flip/: __init__.py  model.py
cvsp/models/lnclip_df/: LICENSE.txt  README.md  __init__.py  config.py  dataset.py  encoder.py  loss.py  metrics.py  model.py  plots.py
cvsp/models/lnclip_df/utils/: decorators.py
cvsp/models/sac/: README.md  __init__.py  adapter.py  model.py  unet_model.py
weights/: .gitignore  download.py
