[project]
name = "cvsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataloader>=2.0",
    "datasets>=4.8.5",
    "deepface>=0.0.100",
    "dlib>=20.0.1",
    "ftfy>=6.3.1",
    "gradio>=6.14.0",
    "huggingface-hub>=1.16.1",
    "imutils>=0.5.4",
    "insightface>=1.0.1",
    "lightning>=2.6.4",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tf-keras>=2.21.0",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchattacks>=3.3.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
    "wandb>=0.27.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
